# katulong

./: .dockerignore  .env.example  .gitignore  .sipag-assignment  .sipag-marker  ACCESS_GUIDE.md  AUTH-AS-A-SERVICE-FLOWS.md  AUTH-AS-A-SERVICE-REVIEW-V2.md  AUTH-AS-A-SERVICE-REVIEW.md  AUTH-AS-A-SERVICE.md  AUTH_DESIGN.md  AUTH_SIMPLIFICATION.md  CLAUDE.md  Cargo.toml  Dockerfile  FRONTEND_ROADMAP.md  HOMEBREW_CLI_PLAN.md  README.md  REFACTORING_SUMMARY.md  SALITA_IMPROVEMENTS.md  TESTING_CHECKLIST.md  _typos.toml  check-html.js  config.json  daemon.js  debug-settings.js  debug-tabs.js  dev.sh  docker-compose.yml  e2e-results.txt  entrypoint.js  inspect-modal.js  install.sh  mcp_servers_catalog.json  mkdocs.yml  nodemon.json  package-lock.json  package.json  playwright-plano.config.js  playwright.config.js  (+10 more)
.claude/: settings.local.json
.claude/agents/: architecture-reviewer.md  code-quality-reviewer.md  correctness-reviewer.md  security-reviewer.md  vision-reviewer.md
.claude/commands/: consult.md  mesh-update.md  orchestrate.md  release.md  review-pr.md  ship-it.md  stage.md  test.md  token.md
.github/workflows/: release.yml  test.yml
.husky/: README.md  pre-commit  pre-push
Formula/: README.md  katulong.rb
bridges/: README.md
bridges/_lib/: config-loader.js  launchd-template.js  registry.js  rotating-logger.js  server.js
crates/auth/: Cargo.toml
crates/auth/src/: credential.rs  error.rs  lib.rs  random.rs  session.rs  setup_token.rs  state.rs  store.rs  webauthn.rs
crates/server/: Cargo.toml
crates/server/src/: access.rs  auth_middleware.rs  cookie.rs  lib.rs  log_util.rs  main.rs  revocation.rs  state.rs  ws.rs
crates/server/src/api/: auth.rs  csrf.rs  devices.rs  error.rs  extract.rs  mod.rs  tokens.rs
crates/server/src/session/: dims.rs  handler.rs  manager.rs  mod.rs  output.rs  parser.rs  ring.rs  router.rs  tmux.rs
crates/server/src/transport/: handle.rs  message.rs  mod.rs  websocket.rs
crates/server/tests/: auth_routes.rs  auth_smoke.rs  devices.rs  index_html.rs  logout_and_pair.rs  revocation_broadcast.rs  websocket.rs  ws_node_frontend.rs
crates/server/tests/common/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  wire.rs
crates/shared/tests/: session_message.rs  wire_round_trip.rs
crates/web/: Cargo.toml  index.html  style.css
crates/web/src/: login.rs  main.rs  ws.rs  xterm.rs
crates/web/src/tile/: layout.rs  mod.rs  status.rs  terminal.rs
docs/: ACCESS_GUIDE.md  CA_SHARING.md  LEARNINGS.md  README.md  SECURITY_IMPROVEMENTS.md  agent-progress-tile.md  architecture.md  block-terminal.md  claude-event-stream.md  claude-feed-watchlist.md  cli-reference.md  clipboard-bridge.md  cluster-state-machine.md  connection-rewrite.md  cross-instance-tiles.md  dispatch.md  dorkyrobot-stack.md  features.md  federated-chat-and-tile-sharing.md  federation-setup.md  file-browser-refactor.md  file-link-worktree-resolution.md  getting-started.md  helm-mode.md  index.html  index.md  mc1e-implementation-plan.md  p2p-progressive-enhancement.md  per-client-headless.md  rewrite-elixir-cljs.md  rewrite-tile-protocol.md  screenshots.md  service-plan.md  session-identity.md  session-meta.md  terminal-blocks.md  terminal-data-pipeline.md  terminal-sizing.md  tile-claude-session-link.md  tile-clusters-design.md  (+6 more)
lib/: access-method.js  agent-presence.js  api-key-auth.js  api-key-scopes.js  auth-handlers.js  auth-repository.js  auth-state.js  auth-tokens.js  auth.js  certificate-manager.js  claude-event-transform.js  claude-hooks.js  claude-narrator.js  claude-pane-scanner.js  claude-permissions.js  claude-processor.js  claude-session-discovery.js  claude-session-manager.js  claude-transcript-discovery.js  claude-watchlist.js  client-headless.js  client-tracker.js  client-transport.js  config.js  constants.js  container-detect.js  credential-lockout.js  daemon-client.js  daemon-protocol.js  dispatch-executor.js  dispatch-refine.js  dispatch-routes.js  dispatch-store.js  drift-log.js  env-config.js  env-filter.js  extension-manager.js  file-browser.js  file-lock.js  git-info.js  (+49 more)
lib/cli/: api-client.js  (+6 more)
public/: app.js  connect.html  connect.js  design-tokens.css  early-scroll-lock.js  index.html  login.html  login.js  logo.pxd  manifest.json  pair.html  pair.js  sw.js  test-plano.html  trust.html  trust.js
scripts/: auto-screenshots.mjs  build-flutter.sh  dev-server.sh  download-fonts.sh  kill-daemon.sh  quick-screenshots.mjs  release.sh  restart-dev.sh  review-context.sh  review.sh  run-e2e-sharded.sh  secrets-scan.sh  smoke-install.sh  take-screenshots-simple.mjs  take-screenshots.mjs
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
test/: DEV_VS_TEST_ISOLATION.md  access-method.test.js  add-target.test.js  api-key-extract.test.js  api-key-persistence.test.js  api-key-scopes.test.js  api-keys.integration.js  app-routes-meta.test.js  auth-handlers.test.js  auth-state.test.js  auth.test.js  auto-copy.test.js  auto-flip.test.js  boot-state.test.js  bridges-config-loader.test.js  bridges-launchd-template.test.js  bridges-registry.test.js  bridges-rotating-logger.test.js  bridges-server.test.js  ca-commands.test.js  card-carousel.test.js  certificate-manager-ca.test.js  certificate-manager.test.js  certificate-store.test.js  claude-event-transform.test.js  claude-feed-routes.test.js  claude-hooks.test.js  claude-narrator.test.js  claude-pane-scanner.test.js  claude-permissions.test.js  claude-processor.test.js  claude-session-discovery.test.js  claude-transcript-discovery.test.js  claude-watchlist.test.js  cli-session-send.test.js  client-headless-integration.test.js  client-headless.test.js  client-transport.test.js  clipboard-bridge.test.js  cluster-composite.test.js  (+166 more)
todos/: agentic-handoffs.md  auto-copy.md  crew-dashboard.md  dispatch-v2-visible-sessions.md  file-browser-tile.md  keyboard-shortcuts.md  latency.md  mobile-space.md  notifications.md  orchestrator.md  passkey-cross-device.md  tab-behavior.md  terminal-jank.md  terminal-links.md  tile-dashboard.md
ui/: .flutter-plugins-dependencies  pubspec.yaml
(+311 files in other folders)
