[package]
name = "katulong-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_server"
path = "test_server.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"