[workspace]
resolver = "2"
members = [
    "crates/auth",
    "crates/shared",
    "crates/server",
    "crates/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dorky Robot"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
leptos = { version = "0.6", features = ["csr"] }
thiserror = "1"
tempfile = "3"
