[workspace]
resolver = "2"
members = [
    "crates/auth",
    "crates/shared",
    "crates/server",
]
# `crates/web` (the Rust+WASM frontend) is FROZEN during the
# Node-cutover. Phase 0b reshaped the WS wire to be byte-compatible
# with the Node SPA in `public/lib/...`, which means the WASM
# client's `crates/web/src/ws.rs` (still on the pre-cutover CBOR/
# Hello-handshake protocol) no longer compiles against
# `katulong_shared::wire`. Excluding it from `members` keeps
# `cargo build --workspace` green for the cutover-critical crates;
# unexcluded for `cargo build -p katulong-web` so a future
# frontend slice can opt into the build explicitly when porting
# the WS code over.
exclude = [
    "crates/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dorky Robot"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
leptos = { version = "0.6", features = ["csr"] }
thiserror = "1"
tempfile = "3"
