[package]
name = "katulong-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
scrypt = { version = "0.11", default-features = false, features = ["simple"] }
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = { version = "2", default-features = false }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
