[package]
name = "katulong-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "katulong-server"
path = "src/main.rs"

[lib]
name = "katulong_server"
path = "src/lib.rs"

[dependencies]
katulong-auth = { path = "../auth" }
katulong-shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { version = "2", default-features = false }
thiserror = { workspace = true }
# `futures::{SinkExt, StreamExt}` for splitting the axum WebSocket
# into read/write halves in transport::websocket. axum re-exports
# the stream trait but not the sink combinators we need.
futures = { version = "0.3", default-features = false, features = ["std"] }
# CBOR wire format for session I/O. Uniform binary over both WS and
# WebRTC DataChannel; no base64 overhead, self-describing for
# schema evolution. `ciborium` is pure Rust, well-maintained, and
# integrates with serde (same derives as serde_json). `serde_json`
# stays in the dep tree because the HTTP API (cookies, error
# envelopes, tokens, devices) still speaks JSON — CBOR is
# session-layer only.
ciborium = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
