[package]
name = "katulong-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "katulong-server"
path = "src/main.rs"

[lib]
name = "katulong_server"
path = "src/lib.rs"

[dependencies]
katulong-auth = { path = "../auth" }
katulong-shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { version = "2", default-features = false }
thiserror = { workspace = true }
# `futures::{SinkExt, StreamExt}` for splitting the axum WebSocket
# into read/write halves in transport::websocket. axum re-exports
# the stream trait but not the sink combinators we need.
futures = { version = "0.3", default-features = false, features = ["std"] }
# CBOR wire format for session I/O. Uniform binary over both WS and
# WebRTC DataChannel; no base64 overhead, self-describing for
# schema evolution. `ciborium` is pure Rust, well-maintained, and
# integrates with serde (same derives as serde_json). `serde_json`
# stays in the dep tree because the HTTP API (cookies, error
# envelopes, tokens, devices) still speaks JSON — CBOR is
# session-layer only.
ciborium = "0.2"
# `serde_bytes` forces `Vec<u8>` fields on `Input`/`Output` messages
# to serialize as CBOR byte-strings (major type 2) instead of arrays
# of small integers. Without this annotation a 1 KiB keystroke/paste
# payload would encode as ~1–2 KiB of integer-element overhead; with
# it, bytes ride the wire literally. Serde's default for `Vec<u8>` is
# array-of-int because it has to pick a portable default across
# codecs — we pick byte-string explicitly because CBOR supports it
# and we're not using any other codec for session I/O.
serde_bytes = "0.11"
# Static asset serving for the Leptos frontend bundle. `ServeDir`
# mounts a directory under a route prefix; `fs` feature gates the
# filesystem-reading bits (the rest of tower-http is feature-
# gated middleware we don't need yet).
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
# `test-util` enables `#[tokio::test(start_paused = true)]` used by
# the output coalescer's timer tests. `tokio`'s `full` feature
# does NOT include it — `test-util` is explicitly test-only and
# opting out of the production build is the point.
tokio = { workspace = true, features = ["test-util"] }
