[package]
name = "katulong-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "katulong-server"
path = "src/main.rs"

[lib]
name = "katulong_server"
path = "src/lib.rs"

[dependencies]
katulong-auth = { path = "../auth" }
katulong-shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { version = "2", default-features = false }
thiserror = { workspace = true }
# `futures::{SinkExt, StreamExt}` for splitting the axum WebSocket
# into read/write halves in transport::websocket. axum re-exports
# the stream trait but not the sink combinators we need.
futures = { version = "0.3", default-features = false, features = ["std"] }
# Phase 0b of the Node-cutover dropped `ciborium` and `serde_bytes`:
# the WS wire is now JSON over text frames so the existing Node
# SPA in `public/lib/...` can drive the Rust server unmodified.
# `serde_json` (already present below via the workspace) covers
# both the HTTP API and the session-protocol encoding now.
# Static asset serving for the Leptos frontend bundle. `ServeDir`
# mounts a directory under a route prefix; `fs` feature gates the
# filesystem-reading bits (the rest of tower-http is feature-
# gated middleware we don't need yet).
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
# Used in integration tests to build realistic WebAuthn
# `clientDataJSON` payloads — the cutover keys the pending
# challenge map by the credential's own
# `clientDataJSON.challenge` (matching Node's
# `extractChallenge`), so test fakes have to base64url a
# real `{type, challenge, origin}` JSON object.
base64 = "0.22"
# `test-util` enables `#[tokio::test(start_paused = true)]` used by
# the output coalescer's timer tests. `tokio`'s `full` feature
# does NOT include it — `test-util` is explicitly test-only and
# opting out of the production build is the point.
tokio = { workspace = true, features = ["test-util"] }
