[package]
name = "katulong-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
# `webauthn-rs-proto` ships the wire-format structs (challenge,
# credential, response) used by both the server (issuing
# challenges, verifying assertions) and the WASM client
# (calling `navigator.credentials.{get,create}`). Keeping it
# as a direct dep of this crate means both consumers see the
# same version, so the JSON shape can't drift.
#
# No `wasm` feature here — that flag adds `From` impls
# bridging `webauthn-rs-proto` types to `web-sys` types,
# which is web-side only. The WASM crate enables the feature
# in its own dependency entry; Cargo's feature unification
# means the WASM build sees the bridge impls without forcing
# them onto the server build.
webauthn-rs-proto = "0.5"
# `serde_bytes` for the byte-string CBOR encoding on
# `ClientMessage::Input.data` and `ServerMessage::Output.data` —
# see the session protocol section in `wire.rs`. Without this
# annotation, `Vec<u8>` payloads encode as CBOR arrays of small
# integers (1-2 bytes overhead per byte), which doubles a 1 KiB
# paste's wire size. The annotation is part of the protocol's
# wire contract; the contract pinning is in
# `tests/session_message.rs::cbor_input_encodes_data_as_byte_string`.
serde_bytes = "0.11"

[dev-dependencies]
serde_json = { workspace = true }
ciborium = "0.2"
