[package]
name = "katulong-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "katulong-web"
path = "src/main.rs"

[dependencies]
# Cross-crate wire types — single source of truth for the
# JSON shapes that flow over /auth/* + /api/{tokens,credentials}. The server crate
# uses the same definitions to build responses and parse
# requests, so a field rename or `#[serde(rename = ...)]`
# change is caught by the type checker on both sides instead
# of manifesting as a runtime "could not deserialize" error.
katulong-shared = { path = "../shared" }
leptos = { workspace = true }
console_error_panic_hook = "0.1"
# `web-sys` for the few browser globals we touch directly.
# Slice 9r.2 added the sign-in WebAuthn surface (Navigator,
# CredentialsContainer, CredentialRequestOptions,
# PublicKeyCredential). Slice 9r.3 adds
# `CredentialCreationOptions` for the registration ceremony
# (`navigator.credentials.create(...)`). Earlier slices added
# URL parsing. Feature-gated narrowly to keep the WASM bundle
# lean.
# Slice 9s.4 added `Element` / `HtmlElement` (xterm mounts into a
# DOM node we hand it via `term.open(el)`), `ResizeObserver` /
# `ResizeObserverEntry` (debounced container-size watcher that
# drives `Resize` notifications to the server) and `DomRect`
# (read by the observer entry's `contentRect`).
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "UrlSearchParams",
    "Navigator",
    "CredentialsContainer",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "PublicKeyCredential",
    "Element",
    "HtmlElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly",
] }
# WebAuthn wire types — the same types the Rust server
# `webauthn_wire` re-exports. The `wasm` feature provides
# `From<RequestChallengeResponse> for
# web_sys::CredentialRequestOptions` and the reverse for
# the assertion, so we don't hand-roll the binary
# (challenge / rawId / signature) base64url ↔ Uint8Array
# conversion.
webauthn-rs-proto = { version = "0.5", features = ["wasm"] }
# WASM-friendly fetch + WebSocket wrapper. `gloo-net`'s
# `websocket::futures::WebSocket` adapts the browser
# WebSocket API into a `Stream + Sink` pair so the WS
# client can `.next().await` inbound frames and `.send().await`
# outbound — no manual onmessage callbacks. The `http`
# feature stays for the auth-ceremony fetch layer.
gloo-net = { version = "0.6", default-features = false, features = ["http", "websocket"] }
# Async glue: `JsFuture::from(promise).await` for
# `navigator.credentials.get(...)`.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# JSON in/out at the HTTP boundary. The server speaks plain
# JSON for auth (CBOR is session-layer only per slice 9d).
# `gloo-net`'s `.json(...)` pulls in `serde_json` transitively;
# we don't list it here because no code in this crate calls
# `serde_json::` directly. If a future slice does, add it back.
serde = { version = "1", features = ["derive"] }
# CBOR codec for the session-layer WS protocol.
# `katulong_shared::wire::{ClientMessage, ServerMessage}` carry
# `#[serde(with = "serde_bytes")]` annotations that produce
# CBOR major-type-2 byte strings — same library on both sides
# of the wire keeps the byte-payload encoding symmetric.
ciborium = "0.2"
# `Stream::next().await` on the gloo-net WebSocket adapter.
# `default-features = false` avoids pulling in a default
# executor — Leptos's `spawn_local` is the WASM executor we
# already use.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# `mpsc::unbounded` for the tile-to-WS-task send channel. The
# `WsClient` context exposes the sender so any tile can call
# `ws.send(ClientMessage::...)`; the lifecycle task owns the
# receiver and drains it in a dedicated send-loop task (paired
# with a separate receive-loop task draining the WS stream).
# See `ws::run_connection` for the rationale on the two-task
# split vs. `futures::select!`.
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
